Bug 1906761 - Skip UpdateDecodeTimes for non-positive-duration frames r=media-playback-reviewers,alwu

This patch restores the behavior that skips `UpdateDecodeTimes` if the
duration of the frame pending to be decoded is not positive [1].
Consequently, frames with non-positive duration will not be counted as
decoded frames behind their PTS time.

[1] https://hg.mozilla.org/mozilla-central/rev/05d7a7c92cf24c6b47bf84a693c71a507b312f3c#l7.51

Differential Revision: https://phabricator.services.mozilla.com/D216836